# mirim

./: .gitignore  .gitmodules  README.md  build.sh  compile_flags.txt  meson.build  test
Docs/Examples/: main.mirim
Docs/Language/: main.md
Docs/Language/Keywords/: for.md  if.md
Docs/Syntax/: main.mirim
Sources/: main.cpp
Sources/Lexer/: lexer.cpp  lexer.hpp  token.cpp  token.hpp
Sources/Token/: token.cpp  token.hpp
Sources/Tokenizer/: token.cpp  token.hpp  tokenizer.cpp  tokenizer.hpp
Tests/: main.cpp  meson.build  tokenizer_test.hpp
docs/examples/: main.mirim
docs/language/: main.md
docs_/language_/keywords_/: for.md  if.md
src/: main.cpp
src/token/: token.cpp  token.hpp
src/tokenizer/: tokenizer.cpp  tokenizer.hpp
